cluster/infrastructure/internal-gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: internal-gateway
  name: internal-gateway
spec:
  selector:
    app.kubernetes.io/name: internal-gateway
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: fleet-salt-publish
    port: 4505
    targetPort: 4505
  - name: fleet-salt-return
    port: 4506
    targetPort: 4506
  - name: forgejo-ssh
    port: 2222
    targetPort: 2222
  - name: neko-turn
    port: 3478
    targetPort: 3478
  - name: rimworld-together-game
    port: 25555
    targetPort: 25555
